+ further cleanup and commenting / organizing

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 		<script src="js/geopins.js"></script>
 		<script src="js/visualize.js"></script>
 		<script src="js/visualize_lines.js"></script>
+		<script src="js/markers.js"></script>	
 		<script src="js/svgtoy.js" type="text/javascript"></script>	
 
 		<script type="x-shader/x-vertex" id="vertexshader">
