adding ui js to index.html

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 		<script src="js/visualize_lines.js"></script>
 		<script src="js/markers.js"></script>	
 		<script src="js/svgtoy.js" type="text/javascript"></script>	
+		<script src="js/ui.controls.js"></script>
 
 		<script type="x-shader/x-vertex" id="vertexshader">
 			uniform float amplitude;
