--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 
 	<body onload="start()" id="dataviz" class="">
 
+		<div id="loading">
+			Loading UN Arms Trade Data from 1992 to 2010... please wait.
+		</div>
+
 		<div id="marker_template" class="marker" style="left:'0px';top:'0px'">
 			<span id="countryText" class="country">
 			</span>
