--- a/testing_ui.html
+++ b/testing_ui.html
@@ -53,7 +53,7 @@
 		<script src="js/markers.js"></script>	
 		<script src="js/svgtoy.js" type="text/javascript"></script>	
 		<script src="js/d3.v2.min.js"></script>
-		<script src="js/ui.controls.js"></script>
+		<script src="js/ui.controls_test.js"></script>
 
 		<script type="x-shader/x-vertex" id="vertexshader">
 			uniform float amplitude;
@@ -127,6 +127,10 @@
 		<!-- All other hud can go here-->
         <div id="hudHeader">
             <h1>Global Arms Trade Visualization</h1>
+            <input type="text" name="country" class="countryTextInput" value="UNITED STATES"> 
+            <input type="button" value="SEARCH" class="searchBtn armsBtn">
+            <input type="button" value="ABOUT" class="aboutBtn armsBtn">
+            
         </div>
 
 	</body>
