--- a/testing_ui.html
+++ b/testing_ui.html
@@ -53,7 +53,7 @@
 		<script src="js/markers.js"></script>	
 		<script src="js/svgtoy.js" type="text/javascript"></script>	
 		<script src="js/d3.v2.min.js"></script>
-		<script src="js/ui.controls.js"></script>
+		<script src="js/ui.controls_test.js"></script>
 
 		<script type="x-shader/x-vertex" id="vertexshader">
 			uniform float amplitude;
