--- a/testing_ui.html
+++ b/testing_ui.html
@@ -129,6 +129,15 @@
             <h1>Global Arms Trade Visualization</h1>
         </div>
         <div id="history">
+            <div class="graph">
+                <div class="close"></div>
+                <div class="labels">
+                    <div class="change">RELATIVE CHANGE</div>
+                    <div class="exports">EXPORTS</div>
+                    <div class="imports">IMPORTS</div><br class="clear" />
+                </div>
+                <div class="container"></div>
+            </div>
             <ul class="timeline">
                 <li>1992</li>
                 <li>93</li>
@@ -152,6 +161,7 @@
                 
             </ul>
         </div>
+        <div id="graphIcon"></div>
 
 	</body>
 </html>	
