started work on user interaction

--- a/testing_ui.html
+++ b/testing_ui.html
@@ -36,6 +36,7 @@
 		<script src="js/THREEx.WindowResize.js"></script>
 		<script src="js/Stats.js"></script>
 		<script src="js/jquery-1.7.1.min.js"></script>
+		<script src="js/jquery-ui-1.8.21.custom.min.js"></script>
 		<script src="js/RequestAnimationFrame.js"></script>	
 		<script src="js/ShaderExtras.js"></script>
 		<script src="js/canvg.js"></script>
@@ -132,7 +133,7 @@
             <div class="graph">
                 <div class="close"></div>
                 <div class="labels">
-                    <div class="change">RELATIVE CHANGE</div>
+                    <div class="change">RELATIVE PERCENT CHANGE</div>
                     <div class="exports">EXPORTS</div>
                     <div class="imports">IMPORTS</div><br class="clear" />
                 </div>
@@ -158,7 +159,7 @@
                 <li>08</li>
                 <li>09</li>
                 <li>2010</li>
-                
+                <div id="handle"></div>
             </ul>
         </div>
         <div id="graphIcon"></div>
