added import export buttons and autocomplete

--- a/testing_ui.html
+++ b/testing_ui.html
@@ -166,6 +166,26 @@
             </ul>
         </div>
         <div id="graphIcon"></div>
+        <div id="importExportBtns">
+            <div class="typeLabels">
+                <div class="mil">Military</div>
+                <div class="civilian">Civilian</div>
+                <div class="ammo">Ammo</div><br class="clear">
+            </div>
+            <div class="imports imex">
+                <div class="mil"><div class="check"></div></div>
+                <div class="civilian"><div class="check"></div></div>
+                <div class="ammo"><div class="check"></div></div>
+                <div class="label">Imports</div><br class="clear">
+            </div>
+            <div class="exports imex">
+                <div class="mil"><div class="check"></div></div>
+                <div class="civilian"><div class="check"></div></div>
+                <div class="ammo"><div class="check"></div></div>
+                <div class="label">Exports</div><br class="clear">
+            </div>
+            
+        </div>
 
 	</body>
 </html>	
