tightening up some of the UI elements

--- a/testing_ui.html
+++ b/testing_ui.html
@@ -11,7 +11,7 @@
 	<body onload="start()" id="dataviz" class="">
 
 		<div id="loading">
-			Loading UN Arms Trade Data from 1992 to 2010... please wait.<br/>Press H to hide the old UI so you can see the new.
+			<h2>Loading UN Arms Trade Data from 1992 to 2010... please wait.</h2>
 		</div>
 
 		<div id="marker_template" class="marker" style="left:'0px';top:'0px'">
