+ removing "break" from 1992 + updating shaders on testing ui html

--- a/testing_ui.html
+++ b/testing_ui.html
@@ -104,6 +104,7 @@
 			uniform sampler2D mapIndex;
 			uniform sampler2D lookup;
 			uniform sampler2D outline;
+			uniform float outlineLevel;
 			varying vec3 vNormal;
 			varying vec2 vUv;	
 			void main() {				
@@ -114,9 +115,11 @@
 				float indexedColor = mapColor.x;	
 				vec2 lookupUV = vec2( indexedColor, 0. );
 				vec4 lookupColor = texture2D( lookup, lookupUV );				
-				float mask = lookupColor.x;
-				float outlineColor = texture2D( outline, vUv ).x;
-				gl_FragColor = vec4( lookupColor.x + outlineColor, lookupColor.y + outlineColor, lookupColor.z + outlineColor, 1.  );						
+				float mask = lookupColor.x + (1.-outlineLevel) * indexedColor;
+				mask = clamp(mask,0.,1.);
+				float outlineColor = texture2D( outline, vUv ).x * outlineLevel;
+				float diffuse = mask + outlineColor;
+				gl_FragColor = vec4( vec3(diffuse), 1.  );						
 				// gl_FragColor = vec4( lookupColor );												
 				// gl_FragColor = vec4(texture2D( lookup, vUv ).xyz,1.);
 			}
