+ import/export labels in histogram to be moved up + opacity of histogram to 95% + all UI on top of country markers + background on bar graph labels to be a black rectangle with opacity 50% + remove all round edges + remove "Visualization" title text + add subtitle + disable all text selection + Swap button rollover opacity states + '%' sign in histogram on active year + port everything over to index.html and ui.controls.js instead of _test versions + search text in all caps

--- a/index.html
+++ b/index.html
@@ -129,13 +129,15 @@
 
 
 		<!-- All other hud can go here-->
-        <div id="hudHeader">
-            <h1>Global Arms Trade</h1>
-			<input type="button" value="SEARCH" class="searchBtn armsBtn">
+        <div id="hudHeader" class="overlayCountries">
+            <h1>Global Arms Trade
+                <div class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id vehicula dolor.</div>
+			</h1>
+            <input type="button" value="SEARCH" class="searchBtn armsBtn">
 			<input type="text" name="country" class="countryTextInput" value="UNITED STATES">  
             <input type="button" value="ABOUT" class="aboutBtn armsBtn">
         </div>
-        <div id="history">
+        <div id="history" class="overlayCountries">
             <div class="graph">
                 <div class="close"></div>
                 <div class="labels">
@@ -168,8 +170,8 @@
                 <div id="handle"></div>
             </ul>
         </div>
-        <div id="graphIcon"></div>
-        <div id="importExportBtns">
+        <div id="graphIcon" class="overlayCountries"></div>
+        <div id="importExportBtns" class="overlayCountries">
             <div class="typeLabels">
                 <div class="mil">Military</div>
                 <div class="civ">Civilian</div>
