country text alignment with import/export labels, about placeholder, setting cur viz Selection state properly

--- a/index.html
+++ b/index.html
@@ -190,5 +190,18 @@
                 <div class="label">Exports</div><br class="clear">
             </div>
         </div>
+
+        <div id="aboutContainer" class='overlayCountries'>
+            <div class="arrowUp"></div>
+            <div id="aboutBox">
+                <div class="title">Information about the data</div>
+                <div class="text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                </div>
+                <div class="links">
+                    <a href="#">link</a>
+                </div>
+            </div>
+        </div>
 	</body>
 </html>	
