histogram now reflects import/export buttons, bar graph numeric label font size is variable, the country markers no longer wrap when on the right edge of the screen

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 			<h2>Loading UN Arms Trade Data from 1992 to 2010... please wait.</h2>
 		</div>
 
-		<div id="marker_template" class="marker" style="left:'0px';top:'0px'">
-			<span id="countryText" class="country">
-			</span>
-			<span id="detailText" class="detail">
-			</span>
+		<div >
+			<table id="marker_template" class="marker" style="left:'0px';top:'0px'"><tr><td><span id="countryText" class="country">
+			</span></td><td class="detail" id="detailText">
+			<!--<span id="detailText" class="detail">
+			</span>--></td></tr></table>
 		</div>
 
 		<div id="visualization" >			
