basic fix for rotation bug, about box message

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
 
 		<!-- All other hud can go here-->
         <div id="hudHeader" class="overlayCountries noPointer">
-            <h1 class="noPointer">Global Arms Trade
-                <div class="subtitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut id vehicula dolor.</div>
+            <h1 class="noPointer">Small Arms and Ammunition - Imports & Exports
+                <div class="subtitle">An interactive visualization of government-authorized small arms and ammunition transfers from 1992 to 2010. </div>
 			</h1>
 			
             <input type="button" value="SEARCH" class="searchBtn armsBtn pointer">
@@ -199,11 +199,13 @@
             <div id="aboutBox">
                 <div class="title">Information about the data</div>
                 <div class="text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-                </div>
+                    This project was produced by Google as part of the Google Ideas INFO (Illicit Networks, Forces in Opposition) Summit with support from the <a href="http://igarape.org.br/" target="_blank">Igarape Institute</a> and the <a href="http://www.prio.no/" target="_blank">Peace Research Institute Oslo (PRIO)</a>. It uses annual customs report data providing >1 million data points of individual exports and imports to map the transfer of small arms, light weapons and ammunition across 250 states and territories across the world between 1992 and 2000. The key source of data is the <a href="http://www.prio.no/" target="_blank">Peace Research Institute Oslo (PRIO)</a> small arms database.<br /><br />
+
+For more info, please download our <a href="#" target="_blank">FAQs</a>.
+                </div><!--
                 <div class="links">
                     <a href="#">link</a>
-                </div>
+                </div>-->
             </div>
         </div>
 	</body>
