--- a/index.html
+++ b/index.html
@@ -109,8 +109,6 @@
 			varying vec2 vUv;	
 			void main() {				
 				
-				// vec4 indexedColor = clamp( indexedColor, 0.0, 1.0 );	
-
 				vec4 mapColor = texture2D( mapIndex, vUv );	
 				float indexedColor = mapColor.x;	
 				vec2 lookupUV = vec2( indexedColor, 0. );
@@ -199,9 +197,17 @@
             <div id="aboutBox">
                 <div class="title">Information about the data</div>
                 <div class="text">
-                    This project was produced by Google as part of the Google Ideas INFO (Illicit Networks, Forces in Opposition) Summit with support from the <a href="http://igarape.org.br/" target="_blank">Igarape Institute</a>. It uses annual customs report data providing >1 million data points of individual exports and imports to map the transfer of small arms, light weapons and ammunition across 250 states and territories across the world between 1992 and 2010. The key source of data is the <a href="http://www.prio.no/" target="_blank">Peace Research Institute Oslo (PRIO)</a> small arms database.<br /><br />
+                    This project was produced by Google as part of the Google Ideas INFO (Illicit Networks, Forces in Opposition) Summit with support from the Igarape Institute. It uses annual customs report data providing >1 million data points of individual exports and imports to map the transfer of small arms, light weapons and ammunition across 250 states and territories across the world between 1992 and 2010. The key source of data is the Peace Research Institute Oslo (PRIO) small arms database.<br /><br />
+
+					For more info, please scan the below QR code with a smart phone:<br /><br />
+
+					[QR CODE HERE]
+
+					<!--
+					 This project was produced by Google as part of the Google Ideas INFO (Illicit Networks, Forces in Opposition) Summit with support from the <a href="http://igarape.org.br/" target="_blank">Igarape Institute</a>. It uses annual customs report data providing >1 million data points of individual exports and imports to map the transfer of small arms, light weapons and ammunition across 250 states and territories across the world between 1992 and 2010. The key source of data is the <a href="http://www.prio.no/" target="_blank">Peace Research Institute Oslo (PRIO)</a> small arms database.<br /><br />
 
 					For more info, please download our <a href="#" target="_blank">FAQs</a>.
+					//-->
                 </div><!--
                 <div class="links">
                     <a href="#">link</a>
