prepping a few elements for 1280 min px res

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 
 	<body onload="start()" id="dataviz" class="">
-
+		<div id="wrapper">
 		<div id="loading">
 			<h2>Loading UN Arms Trade Data from 1992 to 2010... please wait.</h2>
 		</div>
@@ -210,5 +210,6 @@
                 </div>-->
             </div>
         </div>
+    </div>
 	</body>
 </html>	
