+ adding webgl detection and denies everything else

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 			</div>
 		</div>
 
+		<script src="js/Detector.js"></script>
 		<script src="js/Tween.js"></script>
 		<script src="js/dat.gui.min.js"></script>
 		<script src="js/Three.js"></script>
