--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 <div class="title">Information about the data</div>
                 <div class="text">
                     This data visualization was produced by Google as part of the Google Ideas INFO (Illicit Networks, Forces in Opposition) Summit with support from the Igarape Institute and data provided by the Peace Research Institute Oslo (PRIO) small arms database. The data includes annual customs report data providing >1 million data points of individual exports and imports to map the transfer of small arms, light weapons and ammunition across 250 states and territories across the world between 1992 and 2000.
-                    					
+
 					<!--
 					 This project was produced by Google as part of the Google Ideas INFO (Illicit Networks, Forces in Opposition) Summit with support from the <a href="http://igarape.org.br/" target="_blank">Igarape Institute</a>. It uses annual customs report data providing >1 million data points of individual exports and imports to map the transfer of small arms, light weapons and ammunition across 250 states and territories across the world between 1992 and 2010. The key source of data is the <a href="http://www.prio.no/" target="_blank">Peace Research Institute Oslo (PRIO)</a> small arms database.<br /><br />
 
@@ -211,7 +211,7 @@
                 </div>
                 <div class="links">
                 	<br>
-                    For more info, please download our <a href="http://igarape.org.br/MAD" target="_blank">FAQs</a>.
+                    For more info, please download our <a href="http://igarape.org.br/armsglobe" target="_blank">FAQs</a>.
                 </div>
             </div>
         </div>
