--- a/index.html
+++ b/index.html
@@ -126,6 +126,18 @@
 
 		<script src="js/main.js" type="text/javascript"></script>
 
+		<script type="text/javascript">
+			var _gaq = _gaq || [];
+  			_gaq.push(['_setAccount', 'UA-7963116-1']);
+  			_gaq.push(['_setDomainName', 'chromeexperiments.com']);
+  			_gaq.push(['_trackPageview']);
+			  (function() {
+			    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+			  })();
+		</script>
+
 
 		<!-- All other hud can go here-->
         <div id="hudHeader" class="overlayCountries noPointer">
