--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="user-scalable=no, minimum-scale=1.0, maximum-scale=1.0, initial-scale=1">
 		<link rel="stylesheet" type="text/css" href="style.css">
-
 	</head>
 
 	<body onload="start()" id="dataviz" class="">
@@ -28,6 +27,89 @@
 				<!-- 3D webgl canvas here -->
 			</div>
 		</div>
+
+    <!-- All other hud can go here-->
+    <div id="hudHeader" class="overlayCountries noPointer">
+      <h1 class="noPointer">Data Visualization Globe
+        <div class="subtitle">An interactive visualization of source/destination data over time.</div>
+      </h1>
+    </div>
+
+    <div class="overlayCountries noPointer" id="hudButtons">
+      <input type="button" value="SEARCH" class="searchBtn armsBtn pointer">
+      <input type="text" name="country" class="countryTextInput pointer noMapDrag" value="UNITED STATES">
+      <input type="button" value="—" class="zoomBtn zoomOutBtn armsBtn pointer noMapDrag">
+      <input type="button" value="+" class="zoomBtn zoomInBtn armsBtn pointer noMapDrag">
+      <input type="button" value="ABOUT" class="aboutBtn armsBtn pointer"><br class="clear" />
+    </div>
+    <div id="history" class="overlayCountries noPointer">
+      <div class="graph">
+        <div class="close"></div>
+        <div class="labels">
+          <div class="change">RELATIVE PERCENT CHANGE</div>
+          <div class="exports">EXPORTS</div>
+          <div class="imports">IMPORTS</div><br class="clear" />
+        </div>
+        <div class="container noPointer"></div>
+      </div>
+      <ul class="timeline pointer">
+        <li>1992</li>
+        <li>93</li>
+        <li>94</li>
+        <li>95</li>
+        <li>96</li>
+        <li>97</li>
+        <li>98</li>
+        <li>99</li>
+        <li>2000</li>
+        <li>01</li>
+        <li>02</li>
+        <li>03</li>
+        <li>04</li>
+        <li>05</li>
+        <li>06</li>
+        <li>07</li>
+        <li>08</li>
+        <li>09</li>
+        <li>2010</li>
+        <div id="handle" class="noMapDrag"></div>
+      </ul>
+    </div>
+    <div id="graphIcon" class="overlayCountries"></div>
+    <div id="importExportBtns" class="overlayCountries">
+      <div class="typeLabels">
+        <div class="mil">Military</div>
+        <div class="civ">Civilian</div>
+        <div class="ammo">Ammo</div><br class="clear">
+      </div>
+      <div class="imports imex">
+        <div class="mil"><div class="check"></div></div>
+        <div class="civ"><div class="check"></div></div>
+        <div class="ammo"><div class="check"></div></div>
+        <div class="label">Imports</div><br class="clear">
+      </div>
+      <div class="exports imex">
+        <div class="mil"><div class="check"></div></div>
+        <div class="civ"><div class="check"></div></div>
+        <div class="ammo"><div class="check"></div></div>
+        <div class="label">Exports</div><br class="clear">
+      </div>
+      <br class="clear" />
+    </div>
+    <div id="aboutContainer" class='overlayCountries'>
+      <div class="arrowUp"></div>
+      <div id="aboutBox">
+        <div class="title">Information about the data</div>
+        <div class="text">
+          This data visualization was produced by Google as part of the <a href="http://www.google.com/ideas" target="_blank">Google Ideas</a> INFO (Illicit Networks, Forces in Opposition) Summit with support from the <a href="http://igarape.org.br/" target="_blank">Igarape Institute</a> and data provided by the <a href="http://www.prio.no/" target="_blank">Peace Research Institute Oslo (PRIO)</a> small arms database. The visualization includes >1 million individual import and export data points from annual custom reports and maps the transfer of small arms, light weapons and ammunition across 250 nation states and territories around the world between 1992 and 2010.
+        </div>
+        <div class="links">
+          <br>
+          For more info, please see the <a href="http://igarape.org.br/armsglobe" target="_blank">FAQs</a>.
+        </div>
+      </div>
+    </div>
+    </div> <!-- End tag for 'wrapper' div -->
 
 		<script src="js/Detector.js"></script>
 		<script src="js/Tween.js"></script>
@@ -125,102 +207,5 @@
 		</script>
 
 		<script src="js/main.js" type="text/javascript"></script>
-
-		<script type="text/javascript">
-			var _gaq = _gaq || [];
-  			_gaq.push(['_setAccount', 'UA-7963116-1']);
-  			_gaq.push(['_setDomainName', 'chromeexperiments.com']);
-  			_gaq.push(['_trackPageview']);
-			  (function() {
-			    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			  })();
-		</script>
-
-
-		<!-- All other hud can go here-->
-    <div id="hudHeader" class="overlayCountries noPointer">
-      <h1 class="noPointer">Data Visualization Globe
-        <div class="subtitle">An interactive visualization of source/destination data over time.</div>
-			</h1>
-    </div>
-
-		<div class="overlayCountries noPointer" id="hudButtons">
-            <input type="button" value="SEARCH" class="searchBtn armsBtn pointer">
-            <input type="text" name="country" class="countryTextInput pointer noMapDrag" value="UNITED STATES">
-            <input type="button" value="—" class="zoomBtn zoomOutBtn armsBtn pointer noMapDrag">
-            <input type="button" value="+" class="zoomBtn zoomInBtn armsBtn pointer noMapDrag">
-            <input type="button" value="ABOUT" class="aboutBtn armsBtn pointer"><br class="clear" />
-        </div>
-        <div id="history" class="overlayCountries noPointer">
-            <div class="graph">
-                <div class="close"></div>
-                <div class="labels">
-                    <div class="change">RELATIVE PERCENT CHANGE</div>
-                    <div class="exports">EXPORTS</div>
-                    <div class="imports">IMPORTS</div><br class="clear" />
-                </div>
-                <div class="container noPointer"></div>
-            </div>
-            <ul class="timeline pointer">
-                <li>1992</li>
-                <li>93</li>
-                <li>94</li>
-                <li>95</li>
-                <li>96</li>
-                <li>97</li>
-                <li>98</li>
-                <li>99</li>
-                <li>2000</li>
-                <li>01</li>
-                <li>02</li>
-                <li>03</li>
-                <li>04</li>
-                <li>05</li>
-                <li>06</li>
-                <li>07</li>
-                <li>08</li>
-                <li>09</li>
-                <li>2010</li>
-                <div id="handle" class="noMapDrag"></div>
-            </ul>
-        </div>
-        <div id="graphIcon" class="overlayCountries"></div>
-        <div id="importExportBtns" class="overlayCountries">
-            <div class="typeLabels">
-                <div class="mil">Military</div>
-                <div class="civ">Civilian</div>
-                <div class="ammo">Ammo</div><br class="clear">
-            </div>
-            <div class="imports imex">
-                <div class="mil"><div class="check"></div></div>
-                <div class="civ"><div class="check"></div></div>
-                <div class="ammo"><div class="check"></div></div>
-                <div class="label">Imports</div><br class="clear">
-            </div>
-            <div class="exports imex">
-                <div class="mil"><div class="check"></div></div>
-                <div class="civ"><div class="check"></div></div>
-                <div class="ammo"><div class="check"></div></div>
-                <div class="label">Exports</div><br class="clear">
-            </div>
-            <br class="clear" />
-        </div>
-
-        <div id="aboutContainer" class='overlayCountries'>
-            <div class="arrowUp"></div>
-            <div id="aboutBox">
-                <div class="title">Information about the data</div>
-                <div class="text">
-                    This data visualization was produced by Google as part of the <a href="http://www.google.com/ideas" target="_blank">Google Ideas</a> INFO (Illicit Networks, Forces in Opposition) Summit with support from the <a href="http://igarape.org.br/" target="_blank">Igarape Institute</a> and data provided by the <a href="http://www.prio.no/" target="_blank">Peace Research Institute Oslo (PRIO)</a> small arms database. The visualization includes >1 million individual import and export data points from annual custom reports and maps the transfer of small arms, light weapons and ammunition across 250 nation states and territories around the world between 1992 and 2010.
-                </div>
-                <div class="links">
-                	<br>
-                    For more info, please see the <a href="http://igarape.org.br/armsglobe" target="_blank">FAQs</a>.
-                </div>
-            </div>
-        </div>
-    </div>
 	</body>
 </html>
