--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
 		<script src="js/geopins.js"></script>
 		<script src="js/visualize.js"></script>
 		<script src="js/visualize_lines.js"></script>
-		<script src="js/markers.js"></script>
+    <!-- Removing markers for now until I decide how to use them -->
+		<!-- <script src="js/markers.js"></script> -->
 		<script src="js/svgtoy.js" type="text/javascript"></script>
 		<script src="js/d3.v2.min.js"></script>
 		<script src="js/ui.controls.js"></script>
