--- a/index.html
+++ b/index.html
@@ -90,20 +90,20 @@
     </div>
     </div> <!-- End tag for 'wrapper' div -->
 
-		<script src="js/Detector.js"></script>
-		<script src="js/Tween.js"></script>
-		<script src="js/dat.gui.min.js"></script>
-		<script src="js/Three.js"></script>
-		<script src="js/THREEx.KeyboardState.js"></script>
-		<script src="js/THREEx.WindowResize.js"></script>
-		<script src="js/Stats.js"></script>
-		<script src="js/jquery-1.7.1.min.js"></script>
-    <script src="js/jquery-ui-1.8.21.custom.min.js"></script>
-    <script src="js/RequestAnimationFrame.js"></script>
-		<script src="js/ShaderExtras.js"></script>
-		<script src="js/canvg.js"></script>
-		<script src="js/rgbcolor.js"></script>
-		<script src="js/innersvg.js"></script>
+		<script src="thirdparty/Detector.js"></script>
+		<script src="thirdparty/Tween.js"></script>
+		<script src="thirdparty/dat.gui.min.js"></script>
+		<script src="thirdparty/Three.js"></script>
+		<script src="thirdparty/THREEx.KeyboardState.js"></script>
+		<script src="thirdparty/THREEx.WindowResize.js"></script>
+		<script src="thirdparty/Stats.js"></script>
+		<script src="thirdparty/jquery-1.7.1.min.js"></script>
+    <script src="thirdparty/jquery-ui-1.8.21.custom.min.js"></script>
+    <script src="thirdparty/RequestAnimationFrame.js"></script>
+		<script src="thirdparty/ShaderExtras.js"></script>
+		<script src="thirdparty/canvg.js"></script>
+		<script src="thirdparty/rgbcolor.js"></script>
+		<script src="thirdparty/innersvg.js"></script>
 
 		<script src="js/util.js"></script>
 		<script src="js/mousekeyboard.js"></script>
@@ -116,7 +116,7 @@
     <!-- Removing markers for now until I decide how to use them -->
 		<!-- <script src="js/markers.js"></script> -->
 		<script src="js/svgtoy.js" type="text/javascript"></script>
-		<script src="js/d3.v2.min.js"></script>
+		<script src="thirdparty/d3.v2.min.js"></script>
 		<script src="js/ui.controls.js"></script>
 
 		<script type="x-shader/x-vertex" id="vertexshader">
