First checkin of updated Three.js library. All errors/warnings removed, but scene does not render.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<script src="thirdparty/Detector.js"></script>
 		<script src="thirdparty/Tween.js"></script>
 		<script src="thirdparty/dat.gui.min.js"></script>
-		<script src="thirdparty/Three.js"></script>
+		<script src="thirdparty/three.min.js"></script>
 		<script src="thirdparty/THREEx.KeyboardState.js"></script>
 		<script src="thirdparty/THREEx.WindowResize.js"></script>
 		<script src="thirdparty/Stats.js"></script>
