Cleared out a bunch of useless code to make it easier to figure out what's going on.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 
-	<body onload="start()" id="dataviz" class="">
+	<body id="dataviz" class="">
 		<div id="wrapper">
 		<div id="loading">
 			<h2>Loading Data. Please wait...</h2>
