Added legend to the visualization

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
         <div class="subtitle">An interactive visualization of source/destination data over time.</div>
       </h1>
     </div>
+
+		<div id="legend" class="overlayCountries">
+			<h2>Legend</h2>
+			<ul>
+				<li><div class='circle red-back'></div> - Red</li>
+				<li><div class='circle orange-back'></div> - Orange</li>
+				<li><div class='circle blue-back'></div> - Blue</li>
+				<li><div class='circle green-back'></div> - Green</li>
+				<li><div class='circle purple-back'></div> - Purple</li>
+			</ul>
+		</div>
     </div> <!-- End tag for 'wrapper' div -->
 
 		<script src="thirdparty/Detector.js"></script>
