--- a/index.html
+++ b/index.html
@@ -54,16 +54,6 @@
 		<script src="thirdparty/jquery-1.7.1.min.js"></script>
     <script src="thirdparty/RequestAnimationFrame.js"></script>
 
-		<!--<script src="js/util.js"></script>
-		<script src="js/mousekeyboard.js"></script>
-		<script src="js/datguicontrol.js"></script>
-		<script src="js/dataloading.js"></script>
-		<script src="js/geopins.js"></script>
-		<script src="js/visualize.js"></script>
-		<script src="js/visualize_lines.js"></script>-->
-    <!-- Removing markers for now until I decide how to use them -->
-		<!-- <script src="js/markers.js"></script> -->
-
-		<script src="build/bundle.js" type="text/javascript"></script>
+		<script src="build/dataglobe.min.js" type="text/javascript"></script>
 	</body>
 </html>
