Added attribution footer

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
 				<li><div class='circle purple-back'></div> - Purple</li>
 			</ul>
 		</div>
+
+		<footer>
+			<span>Based on <a href="https://www.chromeexperiments.com/experiment/arms-globe">WebGL Arms Globe</a>, a <a href="https://www.chromeexperiments.com/">Chrome Experiment</a></span>
+		</footer>
     </div> <!-- End tag for 'wrapper' div -->
 
 		<script src="thirdparty/Detector.js"></script>
