First checkin of React-based interactive legend

--- a/index.html
+++ b/index.html
@@ -36,14 +36,6 @@
     </div>
 
 		<div id="legend" class="overlayCountries">
-			<h2>Legend</h2>
-			<ul>
-				<li><div class='circle red-back'></div> - Red</li>
-				<li><div class='circle orange-back'></div> - Orange</li>
-				<li><div class='circle blue-back'></div> - Blue</li>
-				<li><div class='circle green-back'></div> - Green</li>
-				<li><div class='circle purple-back'></div> - Purple</li>
-			</ul>
 		</div>
 
 		<footer>
@@ -57,6 +49,7 @@
 		<script src="thirdparty/THREEx.WindowResize.js"></script>
 		<script src="thirdparty/jquery-1.7.1.min.js"></script>
     <script src="thirdparty/RequestAnimationFrame.js"></script>
+		<script src="thirdparty/react-0.12.2.min.js"></script>
 
 		<script src="build/dataglobe.min.js" type="text/javascript"></script>
 	</body>
