Updated React and cleaned up some component code

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
 		<div id="legend" class="overlayCountries">
 		</div>
 
+		<div id="progress" class="overlayCountries">
+		</div>
+
 		<footer>
 			<span>Based on <a href="https://www.chromeexperiments.com/experiment/arms-globe">WebGL Arms Globe</a>, a <a href="https://www.chromeexperiments.com/">Chrome Experiment</a></span>
 		</footer>
@@ -42,7 +45,7 @@
 		<script src="thirdparty/THREEx.WindowResize.js"></script>
 		<script src="thirdparty/jquery-1.7.1.min.js"></script>
     <script src="thirdparty/RequestAnimationFrame.js"></script>
-		<script src="thirdparty/react-0.12.2.min.js"></script>
+		<script src="thirdparty/react-0.13.0.min.js"></script>
 
 		<script src="build/dataglobe.min.js" type="text/javascript"></script>
 	</body>
