--- a/index.html
+++ b/index.html
@@ -39,6 +39,35 @@
 		</footer>
     </div> <!-- End tag for 'wrapper' div -->
 
+		<!--
+		Custom Shaders
+
+		Inspired by: https://github.com/mrdoob/three.js/issues/2118
+		and: http://stackoverflow.com/questions/12337660/three-js-adjusting-opacity-of-individual-particles
+		-->
+		<script type="x-shader/x-vertex" id="vertexshader">
+			attribute float alpha;
+			varying float vAlpha;
+			void main() {
+				vAlpha = alpha;
+				vec4 mvPosition = modelViewMatrix * vec4( position, 1.0 );
+				gl_PointSize = 20.0;
+				gl_Position = projectionMatrix * mvPosition;
+			}
+		</script>
+
+		<script type="x-shader/x-fragment" id="fragmentshader">
+			uniform vec3 color;
+			uniform sampler2D texture;
+			varying float vAlpha;
+
+			void main() {
+				gl_FragColor = vec4( color, 1 );
+				gl_FragColor = gl_FragColor * texture2D( texture, gl_PointCoord );
+				gl_FragColor.a *= vAlpha;
+			}
+		</script>
+
 		<script src="thirdparty/Detector.js"></script>
 		<script src="thirdparty/three.min.js"></script>
 		<script src="thirdparty/THREEx.KeyboardState.js"></script>
