--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
     <script src="thirdparty/RequestAnimationFrame.js"></script>
 		<script src="thirdparty/react-0.13.0.min.js"></script>
 
-		<script src="build/dataglobe.min.js" type="text/javascript"></script>
+		<script src="public/dataglobe.min.js" type="text/javascript"></script>
 	</body>
 </html>
