First checkin of optimizing thirdparty libraries. Step 1: use bower components where available

--- a/index.html
+++ b/index.html
@@ -76,12 +76,11 @@
 			}
 		</script>
 
+		<script src="public/thirdparty.min.js" type="text/javascript"></script>
 		<script src="thirdparty/Detector.js"></script>
-		<script src="thirdparty/three.min.js"></script>
 		<script src="thirdparty/THREEx.KeyboardState.js"></script>
 		<script src="thirdparty/THREEx.WindowResize.js"></script>
     <script src="thirdparty/RequestAnimationFrame.js"></script>
-		<script src="thirdparty/react-0.13.0.min.js"></script>
 
 		<script src="public/dataglobe.min.js" type="text/javascript"></script>
 	</body>
